force-app/main/default/objects/Rental_Application__c/Rental_Application__c.object-meta.xml
<CustomObject>
    <label>Rental Application</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Rental Application #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>