force-app/main/default/objects/Rental_Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Applicant</fullName>
                <default>true</default>
                <label>New Applicant</label>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>Rental Agreement</fullName>
            </value>
            <value>
                <fullName>Finalized Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>