force-app/main/default/objects/Rental_Application__c/fields/Closed_Status__c.field-meta.xml
<CustomField>
    <fullName>Closed_Status__c</fullName>
    <label>Closed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finalized Lease</fullName>
            </value>
            <value>
                <fullName>Withdrawn Application</fullName>
            </value>
            <value>
                <fullName>Rejected Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>