force-app/main/default/objects/Rental_Application__c/fields/Create_Tenant_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Create_Tenant_Portal_User__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select this field if you want a Tenant Portal user to be created for this applicant. Only works when the Closed Status is &quot;Finalized Lease&quot;.</inlineHelpText>
    <label>Create Tenant Portal User</label>
    <type>Checkbox</type>
</CustomField>