force-app/main/default/objects/Rental_Application__c/fields/Criminal_History__c.field-meta.xml
<CustomField>
    <fullName>Criminal_History__c</fullName>
    <label>Criminal History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>