force-app/main/default/objects/Rental_Application__c/fields/Employment_Verification__c.field-meta.xml
<CustomField>
    <fullName>Employment_Verification__c</fullName>
    <label>Employment Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Verification_Status</valueSetName>
    </valueSet>
</CustomField>