force-app/main/default/objects/Rental_Application__c/fields/Expected_Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Lease_End_Date__c</fullName>
    <formula>IF(AND(ISPICKVAL(Lease_Length__c,&quot;1 Year&quot;), NOT(ISBLANK(Estimated_Move_In_Date__c))),
DATE(YEAR(Estimated_Move_In_Date__c)+1,MONTH(Estimated_Move_In_Date__c),DAY(Estimated_Move_In_Date__c)),
IF(AND(ISPICKVAL(Lease_Length__c,&quot;2 Year&quot;), NOT(ISBLANK(Estimated_Move_In_Date__c))),
DATE(YEAR(Estimated_Move_In_Date__c)+2,MONTH(Estimated_Move_In_Date__c),DAY(Estimated_Move_In_Date__c)),
IF(AND(ISPICKVAL(Lease_Length__c,&quot;3 Year&quot;), NOT(ISBLANK(Estimated_Move_In_Date__c))),
DATE(YEAR(Estimated_Move_In_Date__c)+3,MONTH(Estimated_Move_In_Date__c),DAY(Estimated_Move_In_Date__c)),
NULL
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Lease End Date</label>
    <type>Date</type>
</CustomField>