force-app/main/default/objects/Rental_Application__c/fields/Has_Pets__c.field-meta.xml
<CustomField>
    <fullName>Has_Pets__c</fullName>
    <label>Has Pets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>