force-app/main/default/objects/Rental_Application__c/fields/Lease_Length__c.field-meta.xml
<CustomField>
    <fullName>Lease_Length__c</fullName>
    <label>Lease Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Year</fullName>
            </value>
            <value>
                <fullName>3 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>