force-app/main/default/objects/Rental_Application__c/fields/Number_of_Occupants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Occupants__c</fullName>
    <label>Number of Occupants</label>
    <summaryForeignKey>Occupant__c.Applicant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>