force-app/main/default/objects/Rental_Application__c/fields/Occupant_Information__c.field-meta.xml
<CustomField>
    <fullName>Occupant_Information__c</fullName>
    <label>Occupant Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>