force-app/main/default/objects/Rental_Application__c/fields/Pet_Information__c.field-meta.xml
<CustomField>
    <fullName>Pet_Information__c</fullName>
    <label>Pet Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>