force-app/main/default/objects/Rental_Application__c/fields/Previously_Evicted__c.field-meta.xml
<CustomField>
    <fullName>Previously_Evicted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previously Evicted?</label>
    <type>Checkbox</type>
</CustomField>