force-app/main/default/objects/Rental_Application__c/fields/Property_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Property_of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property of Interest</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>