force-app/main/default/objects/Rental_Application__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Criminal History</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Prior Eviction</fullName>
            </value>
            <value>
                <fullName>Credit Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>