force-app/main/default/objects/Rental_Application__c/fields/Rental_History_Verification__c.field-meta.xml
<CustomField>
    <fullName>Rental_History_Verification__c</fullName>
    <label>Rental History Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Verification_Status</valueSetName>
    </valueSet>
</CustomField>