force-app/main/default/objects/Rental_Application__c/fields/Source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Income__c</fullName>
    <inlineHelpText>Complete for applicants that are currently unemployed.</inlineHelpText>
    <label>Source of Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>