force-app/main/default/objects/Rental_Application__c/fields/Tenant_Record__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Automatically populated when lease is finalized.</inlineHelpText>
    <label>Tenant Record</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Tenant does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Tenant</value>
        </filterItems>
        <infoMessage>Please select the tenant related to this application.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rental Applications</relationshipLabel>
    <relationshipName>Rental_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>