force-app/main/default/objects/Rental_Application__c/validationRules/Closed_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Status_Required</fullName>
    <active>true</active>
    <description>The Closed Status field is required whenever the Application Status is &quot;Closed&quot;.</description>
    <errorConditionFormula>ISPICKVAL(Application_Status__c,&quot;Closed&quot;) &amp;&amp; ISBLANK(TEXT(Closed_Status__c))</errorConditionFormula>
    <errorMessage>Please select a value for Closed Status before closing out the application.</errorMessage>
</ValidationRule>