force-app/main/default/objects/Rental_Application__c/listViews/Closed_Rental_Applications.listView-meta.xml
<ListView>
    <fullName>Closed_Rental_Applications</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Closed_Status__c</columns>
    <columns>Rejection_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Rental Applications</label>
</ListView>