force-app/main/default/objects/Rental_Application__c/listViews/Open_Rental_Applications.listView-meta.xml
<ListView>
    <fullName>Open_Rental_Applications</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Estimated_Move_In_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Open Rental Applications</label>
</ListView>